Added Detection details

--- a/investigations/templates/investigations/windows/process_artifacts/process_dlls.html
+++ b/investigations/templates/investigations/windows/process_artifacts/process_dlls.html
@@ -9,6 +9,7 @@
           <th scope="col" class="dlllist_field">Size</th>
           <th scope="col" class="dlllist_field">LoadTime</th>
           <th scope="col" class="dlllist_field">File_output</th>
+          <th scope="col" class="dlllist_field">Actions</th>
         </tr>
       </thead>
       <tbody id="dlllistBody">
