--- a/investigations/templates/investigations/windows/ma_artifacts/ma_filescan.html
+++ b/investigations/templates/investigations/windows/ma_artifacts/ma_filescan.html
@@ -42,46 +42,7 @@
 {% csrf_token %}
 
 <script>
-
   function Virustotal_file(pk) {
-    const csrf = document.getElementsByName('csrfmiddlewaretoken');
-    const fd = new FormData();
-    fd.append('csrfmiddlewaretoken', csrf[0].value);
-    fd.append('id', pk);
-    $.ajax({
-      type: 'POST',
-      url: "{% url 'virustotal_file' %}",
-      enctype: 'multipart/form-data',
-      data: fd,
-      beforeSend: function () {
-        $('#proc-message').html("Your Virustotal request was taken into account");
-        $('.toast-proc').toast('show');
-      },
-      success: function (response) {
-        console.log(response['message']);
-        console.log(response['url']);
-        
-        switch (response['message']['data']['type']) {
-          case "analysis":
-            $('#proc-message').html("Virustotal is still processing your file");
-            $('.toast-proc').toast('show');
-            break;
-          case "file":
-            document.querySelector('#vt-augment-container').src = response['url'];
-            $("#showVirustotal").modal("show");
-            break;
-          default:
-            break;
-        }
-      },
-      error: function (error) {
-        console.log(error);
-        $('#proc-error-message').html("Virustotal analysis error");
-        $('.toast-proc-error').toast('show');
-      },
-      cache: false,
-      contentType: false,
-      processData: false
-    });
+    Virustotal(pk,"{% url 'virustotal_file' %}");
   }
 </script>
