ClamAV as a button for PsScan, DllList and FileScan

--- a/investigations/templates/investigations/reviewinvest.html
+++ b/investigations/templates/investigations/reviewinvest.html
@@ -78,7 +78,7 @@
 
             <!-- Detection -->
             {% include "investigations/windows/detection/detection.html" %}
-
+            {% include "investigations/windows/detection/clamAVModal.html" %}
         </main>
       {% else %}
         {% include "investigations/linux/sidebar.html" %}
