--- a/investigations/templates/investigations/windows/ma_artifacts/ma_filescan.html
+++ b/investigations/templates/investigations/windows/ma_artifacts/ma_filescan.html
@@ -33,6 +33,8 @@
         <td>
           <a class="btn border border-light btn-sm" role="button"
             onclick="event.stopPropagation(); Virustotal_file('{{files.pk}}');">Virustotal</a>
+            <a class="btn border border-light btn-sm" role="button"
+            onclick="event.stopPropagation(); ClamAV_file('{{files.pk}}','FileScan');">ClamAV</a>
         </td>
       </tr>
       {% endfor %}
@@ -45,4 +47,9 @@
   function Virustotal_file(pk) {
     Virustotal(pk,"{% url 'virustotal_file' %}");
   }
+
+  function ClamAV_file(pk,model) {
+    ClamAV(pk,model,"{% url 'clamav' %}");
+  }
+
 </script>
