Added clamav at scan time and display results in pslist

--- a/investigations/templates/investigations/windows/process_artifacts/process_list.html
+++ b/investigations/templates/investigations/windows/process_artifacts/process_list.html
@@ -20,7 +20,11 @@
       </thead>
       <tbody id="processList">
         {% for process in PsList %}
-        <tr>
+        {% if process.is_clamav_suspicious%}
+          <tr style="color: red;" data-toggle="tooltip" data-placement="bottom" title="{{process.clamav_details}}">
+        {% else %}
+          <tr>
+        {% endif %}
           <td>{{process.PID}}</td>
           <td>{{process.PPID}}</td>
           <td>{{process.ImageFileName}}</td>
