--- a/investigations/templates/investigations/newinvest.html
+++ b/investigations/templates/investigations/newinvest.html
@@ -1,7 +1,8 @@
 {% extends "dashboard/base.html" %}
 {% load static %}
 {% block content%}
-<div class="container"><a class="btn btn-link link-primary mb-3" role="button" target="_parent" href="{% url 'investigations' %}"><i class="fas fa-arrow-left"></i>&nbsp;Back</a>
+<div class="container"><a class="btn btn-link link-primary mb-3" role="button" target="_parent"
+    href="{% url 'investigations' %}"><i class="fas fa-arrow-left"></i>&nbsp;Back</a>
   <div class="d-sm-flex justify-content-between align-items-center mb-4">
     <h3 class="text-dark mb-0">New investigation</h3>
   </div>
@@ -26,11 +27,13 @@
         </div>
         <div class="mb-3"><label class="form-label" for="client_description"><strong>Description *</strong><br></label>
           {{form.description}}
-          <div class="mb-3"><label class="form-label" for="service_client_payment_validated"><strong>Forensics Analyst&nbsp; *</strong></label>
+          <div class="mb-3"><label class="form-label" for="service_client_payment_validated"><strong>Forensics
+                Analyst&nbsp; *</strong></label>
             <div class="form-group mb-3">
               {% for u in Users %}
               <a onclick="ToggleInvestigator('{{u.username}}');" href="#">
-                <span id="badge_{{u.username}}" class="badge text-muted" style="margin-right: 10px;background-color: rgb(255,255,255);border: 1px solid rgb(0,0,0) ;">{{u.username}}</span>
+                <span id="badge_{{u.username}}" class="badge text-muted"
+                  style="margin-right: 10px;background-color: rgb(255,255,255);border: 1px solid rgb(0,0,0) ;">{{u.username}}</span>
               </a>
             </div>
             {% endfor %}
@@ -38,42 +41,56 @@
           </div>
           <div class="row mb-2">
             <div class="col">
-              <div class="mb-3"><label class="form-label" for="service_client_end_date"><strong>Memory Dump *</strong><br></label>
-                <input class="form-control" id="fileupload" type="file"></div>
+              <div class="mb-3"><label class="form-label" for="service_client_end_date"><strong>Memory Dump
+                    *</strong><br></label>
+                <input class="form-control" id="fileupload" type="file">
               </div>
-            </div><button class="btn btn-primary" id="submit">Create</button>
+            </div>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label class="form-label"><strong>Parameters</strong><br></label>
+          <div class="row mb-2">
+            <label>{{form.do_clamav}} ClamAV</label>
+          </div>
+        </div>
+        <div class="mb-3">
+          <div class="col">
+            <button class="btn btn-primary" id="submit">Create</button>
           </div>
         </div>
         <div class="text-end mb-3"></div>
-      </form>
+      </div>
     </div>
-    <div id="uploaded_files"></div>
-    <!-- The alert box displaying the error messages if the form is not valid -->
-    <div id="alert-box" class="text-dark not-visible"></div>
-    <script>
-      function ToggleInvestigator(u){
-        var badge = document.getElementById('badge_'+u);
-        var investigators = document.getElementById('id_investigators');
+  </form>
+</div>
+<div id="uploaded_files"></div>
+<!-- The alert box displaying the error messages if the form is not valid -->
+<div id="alert-box" class="text-dark not-visible"></div>
+<script>
+  function ToggleInvestigator(u) {
+    var badge = document.getElementById('badge_' + u);
+    var investigators = document.getElementById('id_investigators');
 
-        if(badge.classList.contains("text-muted")){
-          if(investigators.value.includes(u) == false){
-            investigators.value += u + ' ';
-          }
-          badge.classList.remove("text-muted");
-          badge.classList.add("text-success");
-        }
-        else{
-          investigators.value = investigators.value.replace(u,"").replace(' ','');
-          badge.classList.remove("text-success");
-          badge.classList.add("text-muted");
-        }
-        theme();
+    if (badge.classList.contains("text-muted")) {
+      if (investigators.value.includes(u) == false) {
+        investigators.value += u + ' ';
       }
-      $(document).ready(function(){
-        $('.spinner-main').hide();
-        $('.container').show();
-        $('.container-fluid').show();
-      });
-    </script>
-    <script src="{% static 'js/upload.js' %}"></script>
-    {% endblock content %}
+      badge.classList.remove("text-muted");
+      badge.classList.add("text-success");
+    }
+    else {
+      investigators.value = investigators.value.replace(u, "").replace(' ', '');
+      badge.classList.remove("text-success");
+      badge.classList.add("text-muted");
+    }
+    theme();
+  }
+  $(document).ready(function () {
+    $('.spinner-main').hide();
+    $('.container').show();
+    $('.container-fluid').show();
+  });
+</script>
+<script src="{% static 'js/upload.js' %}"></script>
+{% endblock content %}
